--- a/static/css/_media.scss
+++ b/static/css/_media.scss
@@ -66,6 +66,7 @@
             &-logo {
                 width: 94px;
                 height: 25px;
+                margin-left: 20px;
             }
 
             &-nav {
