--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -20,7 +20,8 @@
     &-inner {
         width: 1160px;
         margin: 0 auto;
-        padding: 10px 0;
+        padding-top: 10px;
+        height: 58px;
     }
 
 
@@ -29,8 +30,8 @@
     &-logo {
         float: left;
         width: 188px;
-        height: 50px;
-        margin-left: 20px;
+        height: 58px;
+        margin-right: 50px;
         >img {
             width: 100%;
         }
